--- a/exemple.env
+++ b/exemple.env
@@ -1,9 +1,11 @@
 NODE_ENV=dev
-SECRET_KEY=your_secret_key
-DB_HOST=
-DB_PORT=
-DB_USER=
-DB_PASSWORD=
+SECRET_KEY=your_secret_key   # jsonwebtoken secret key
+PORT=80
+DB_HOST=localhost
+DB_PORT=5432
+DB_USER=postgres
+DB_PASSWORD=admin
 DB_NAME=dbdev
 DB_NAME_TEST=test
-BASE_URL=
+BASE_URL=http://localhost
+SENTRY_DSN=<YOUR_SENTRY_DNS>
