--- a/package.json
+++ b/package.json
@@ -5,17 +5,20 @@
   "scripts": {
     "lint": "npx eslint .",
     "build": "tsc",
-    "start": "node dist/index.js",
+    "start": "node dist/src/index.js",
     "dev": "nodemon src/index.ts",
     "test": "jest --runInBand ",
     "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage"
+    "test:coverage": "jest --coverage",
+    "docker": "docker-compose up --watch"
   },
   "keywords": [],
   "author": "Cesar Stenico",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@sentry/node": "^8.25.0",
+    "@sentry/profiling-node": "^8.25.0",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
