Configuration to Railway deploy
Add Configuration to Railway deploy.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
       watch:
         - action: sync
           path: .
-          target: /app
+          target: .
           ignore:
             - node_modules/
         - action: rebuild
