--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,10 +3,11 @@
     "target": "ES6",                         
     "module": "commonjs",                    
     "outDir": "./dist",                      
-    "rootDir": "./src",                      
+    "rootDir": ".",                      
     "strict": true,                          
     "esModuleInterop": true,                 
     "skipLibCheck": true,                    
     "forceConsistentCasingInFileNames": true 
-  }
+  },
+  "include": ["src/**/*.ts"],
 }
